manifest/objects/APTS_Integration_Transaction__c.object
<CustomObject>
    <description>Holds transactional data (details like request data, response data, status, etc..) for each webservice invocation</description>
    <fields>
        <fullName>APTS_Error_Code_Repository__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Looks upto error code maintained in &apos;Error Code Master&apos; object</description>
        <label>Error Code Repository</label>
        <referenceTo>APTS_Error_Code_Repository__c</referenceTo>
        <relationshipLabel>Integration Transactions</relationshipLabel>
        <relationshipName>APTS_IntegrationTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Integration_Repository__c</fullName>
        <description>Logs transaction messages for each web service invocation tracked under Integration Master</description>
        <label>Integration Repository</label>
        <referenceTo>APTS_Integration_Repository__c</referenceTo>
        <relationshipLabel>Integration Transactions</relationshipLabel>
        <relationshipName>APTS_IntegrationTransactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Perform_Retry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Perform Retry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Request_Parameters__c</fullName>
        <description>Parameters sent in request during call out</description>
        <label>Request Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Request_Payload__c</fullName>
        <description>It represents actual request data being sent to target system</description>
        <label>Request Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Request_Timestamp__c</fullName>
        <description>It represents date/time of request sent to target system</description>
        <label>Request Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_Response_Parameters__c</fullName>
        <description>Response parameters provided by web service</description>
        <label>Response Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Response_Payload__c</fullName>
        <description>Represents actual response data provided by target system</description>
        <label>Response Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Response_Timestamp__c</fullName>
        <description>Represents date/time when response is received from target system</description>
        <label>Response Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_Stack_Trace__c</fullName>
        <description>Represents error text either received as part of response provided by target system or unavailability of service</description>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Integration Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_Integration_Repository__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>APTS_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Status__c</field>
            <operation>equals</operation>
            <value>Failure</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>customView</fullName>
        <columns>NAME</columns>
        <columns>APTS_Error_Code_Repository__c</columns>
        <columns>APTS_Integration_Repository__c</columns>
        <columns>APTS_Request_Payload__c</columns>
        <columns>APTS_Request_Timestamp__c</columns>
        <columns>APTS_Response_Payload__c</columns>
        <columns>APTS_Response_Timestamp__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>customView</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TXN-{0000000000}</displayFormat>
        <label>Integration Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>